# target-airtable

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  meltano.yml  pyproject.toml  target-airtable.yml
.github/workflows/: lint.yml
target_airtable/: airtable.py  sinks.py  target.py
tests/: conftest.py  test_client.py
